--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <source src="scr/preview.mp4" type="video/mp4">
             Ваш браузер не поддерживает видео.
         </video>
-        <img id="play-button" src="scr/play.png" alt="Play" class="play-btn">
+        <img id="play-button" src="scr/pause.png" alt="Play" class="play-btn">
     </div>
 </header>
     <img src="scr/Frame 13.png" alt="Дизайн 1" class="full-width">
